manifests/overlays/staging/broadcaster.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: todo-go-broadcaster
          image: PROJECT/BROADCASTER
