manifests/overlays/staging/frontend.deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: staging
  name: todo-go-frontend
spec:
  template:
    spec:
      containers:
      - name: todo-go-frontend
        image: djblackett/frontend:v4.02.8
