manifests/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-go-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
  - host: staging.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-go-frontend-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-go-backend-svc
            port:
              number: 2345
  - host: staging.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-go-frontend-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-go-backend-svc
            port:
              number: 2345
